--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css">
   <link rel="stylesheet" href="./assets/css/style.css" />
   <title>Taskmaster Pro</title>
 </head>
@@ -28,7 +29,7 @@
         <div class=" col-12 col-md-6 col-xl-3 mb-3">
           <div class="card">
             <h4 class="card-header bg-dark text-light">
-              To Do</h2>
+              To Do</h4>
               <ul id="list-toDo" class="list-group"> </ul>
             </div>
           </div>
@@ -36,10 +37,6 @@
             <div class="card">
             <h4 class="card-header bg-dark text-light">In Progress</h4>
             <ul id="list-inProgress" class="list-group"> 
-              <li class="list-group-item">
-                <span class="badge badge-primary badge-pill">11/24/2021</span>
-                <p>Something More Original</p>
-              </li>
             </ul>
           </div>
         </div>
@@ -96,6 +93,8 @@
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery-ui-touch-punch@0.2.3/jquery.ui.touch-punch.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script src="./assets/js/script.js"></script>
